k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pr
  namespace: portfolio-rebalancer
  labels:
    app: pr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pr
  template:
    metadata:
      labels:
        app: pr
    spec:
      containers:
        - image: httpd
          imagePullPolicy: Always
          name: pr
          ports:
            - containerPort: 80
              protocol: TCP
