k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pr
spec:
  type: ClusterIP
  selector:
    app: pr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
